fixed overflowing becoause of footer

--- a/style.css
+++ b/style.css
@@ -819,7 +819,6 @@ header .navbar{
 
 /* FOOTER STYLING */
 .footer-section{
-    width: 100vw;
     background: #FFF3EA;
 
 }
